<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_rate" android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/rate_app" />
    </group>

    <item android:title="@string/share">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@drawable/com_facebook_button_icon"
                android:title="@string/share_fb" />
        </menu>
    </item>

    <item android:id="@+id/interest" android:title="@string/interested">
        <menu>
            <item android:id="@+id/nav_diner"
                android:title="@string/dinerName" android:icon="@drawable/ic_get_app_black_24dp" />
            <item android:id="@+id/nav_pere"
                android:title="@string/pereName" android:icon="@drawable/ic_get_app_black_24dp" />
        </menu>
    </item>

</menu>
