<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="64sp"
            android:background="@color/teal_darken2"
            android:gravity="center_horizontal|center_vertical"
            android:scaleType="center"
            android:text="@string/dialog_title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/setRingtone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/dialogTitle"
            android:text="@string/setRingtone" />

        <Button
            android:id="@+id/setNotif"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/setRingtone"
            android:text="@string/setNotif" />

        <RelativeLayout
            android:id="@+id/rel_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setNotif"
            android:layout_marginTop="10sp">

            <com.google.android.gms.ads.AdView
                android:id="@+id/banner_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_bottom" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>