<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_darken2"
    tools:context=".activities.SplashActivity">

    <RelativeLayout
        android:id="@+id/maincontent_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/headline_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/splashImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appTitle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_music_note_black_48dp" />

        <TextView
            android:id="@+id/appSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splashImg"
            android:layout_centerVertical="true"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/app_subname"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/site_url"
            android:textColorLink="@color/black"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

    </RelativeLayout>

</FrameLayout>
